--- a/src/weatherapp.css
+++ b/src/weatherapp.css
@@ -1,57 +1,65 @@
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #88a2da;
+  background-color: rgb(163, 221, 238);
 }
 
-.weather-app {
+.App {
   text-align: center;
-  padding: 20px;
-  border-radius: 8px;
-  background-color: #5181eb;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top: 50px;
 }
 
-input[type="text"] {
-  padding: 10px;
-  margin-right: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+.search-container {
+  margin-bottom: 20px;
 }
 
+.input[type="text"],
 button {
-  padding: 10px 20px;
-  background-color: #42eb83;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #0056b3;
-}
-
-.error {
-  color: #ff0000;
-  margin-top: 10px;
-}
-.loading-msg {
-  margin-top: 10px;
-  color: #007bff;
+  background-color: rgb(129, 243, 129);
+  border-radius: 5px;
+  margin: 3px;
+  padding: 5px;
 }
 
 .weather-info {
+  font-size: small;
+  font-style: inherit;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
-.weather-info p {
-  margin: 5px 0;
+.info-box {
+  border-radius: 10px;
+  background-color: rgb(244, 250, 250);
+  border: 1px solid #f5eeee;
+  padding: 10px;
+  margin: 10px;
+  width: 200px;
+  text-align: center;
+}
+.info-box1 {
+  border-radius: 10px;
+  background-color: rgb(244, 250, 250);
+  border: 1px solid #f5eeee;
+  padding: 10px;
+  margin: 10px;
+  width: 200px;
+  text-align: center;
+}
+.info-box2 {
+  border-radius: 10px;
+  background-color: rgb(244, 250, 250);
+  border: 1px solid #f5eeee;
+  padding: 10px;
+  margin: 10px;
+  width: 200px;
+  text-align: center;
+}
+.info-box3 {
+  border-radius: 10px;
+  background-color: rgb(244, 250, 250);
+  border: 1px solid #f5eeee;
+  padding: 10px;
+  margin: 10px;
+  width: 200px;
+  text-align: center;
 }
